corrected style contact privacy check - text alignement left

--- a/src/app/content/contact-section/contact-section.component.sass
+++ b/src/app/content/contact-section/contact-section.component.sass
@@ -192,6 +192,7 @@
                     .agree-privacypolice-check
                         display: flex
                         flex-direction: column
+                        align-items: flex-start
                         width: 100%
                         height: auto
                         gap: 0.5rem
